# pm-bot

./: .gitignore  README.md  pyproject.toml
scripts/: backtest.py  run_bot.py  sync_weather_cities.py  test_buy.py
src/pm_bot/: __init__.py  cli.py  config.py  dashboard.py
src/pm_bot/api/: client.py  models.py  websocket.py
src/pm_bot/backtest/: engine.py  report.py
src/pm_bot/data/: models.py  store.py
src/pm_bot/engine/: bot.py  order_manager.py  portfolio.py  risk.py  scanner.py  strategy_engine.py
src/pm_bot/strategies/: arbitrage.py  base.py  market_maker.py  naive_value.py  signal.py
src/pm_bot/utils/: alerts.py  logging.py
src/pm_bot/weather/: __init__.py  climatology.py  parser.py  providers.py  source.py
