[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "pm-bot"
version = "0.1.0"
description = "Kalshi prediction market trading bot"
requires-python = ">=3.11"
dependencies = [
    "httpx[http2]",
    "websockets",
    "pandas",
    "pydantic>=2.0",
    "pydantic-settings",
    "python-dotenv",
    "sqlmodel",
    "aiosqlite",
    "structlog",
    "cryptography",
    "click",
    "rich",
    "plotly",
    "kaleido",
    "scipy",
]

[project.optional-dependencies]
dev = [
    "pytest",
    "pytest-asyncio",
    "ruff",
]
dashboard = [
    "streamlit",
]
sentiment = [
    "openai",
    "feedparser",
]

[project.scripts]
pm-bot = "pm_bot.cli:cli"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
